--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <url>https://github.com/neva-dev/felix-search-webconsole-plugin</url>
         <connection>scm:git:ssh://git@github.com/neva-dev/felix-search-webconsole-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/neva-dev/felix-search-webconsole-plugin.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>search-webconsole-plugin-1.0.0</tag>
     </scm>
 
     <licenses>
@@ -70,6 +70,11 @@
         </resources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
