--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,8 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-felix-search-webconsole-plugin</id>
+            <id>bintray-neva-dev-maven-public</id>
+            <name>neva-dev-maven-public</name>
             <url>https://api.bintray.com/maven/neva-dev/maven-public/felix-search-webconsole-plugin/;publish=1</url>
         </repository>
     </distributionManagement>
