--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,13 @@
   specific language governing permissions and limitations
   under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.neva.felix</groupId>
     <artifactId>search-webconsole-plugin</artifactId>
     <packaging>bundle</packaging>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.1-cfr-SNAPSHOT</version>
     <name>search-webconsole-plugin</name>
     <description>Search everywhere plugin for Apache Felix Web Console</description>
     <inceptionYear>2017</inceptionYear>
@@ -110,17 +111,14 @@
                             com.google.common.*
                             org.apache.commons.io.*,
                             org.apache.commons.lang3.*
-                            com.strobel.assembler.*;
-                            com.strobel.decompiler.*;
+                            org.benf.cfr.*;
                         </Private-Package>
                         <Embed-Dependency>
                             gson,
                             guava,
                             commons-lang3,
                             commons-io,
-                            procyon-core,
-                            procyon-reflection,
-                            procyon-compilertools
+                            cfr
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
@@ -145,21 +143,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <additionalJOption>-Xdoclint:none</additionalJOption>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.sling</groupId>
@@ -207,21 +190,9 @@
 
         <!-- Java decompiler -->
         <dependency>
-            <groupId>org.bitbucket.mstrobel</groupId>
-            <artifactId>procyon-core</artifactId>
-            <version>${procyon.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bitbucket.mstrobel</groupId>
-            <artifactId>procyon-reflection</artifactId>
-            <version>${procyon.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bitbucket.mstrobel</groupId>
-            <artifactId>procyon-compilertools</artifactId>
-            <version>${procyon.version}</version>
+            <groupId>org.benf</groupId>
+            <artifactId>cfr</artifactId>
+            <version>${cfr.version}</version>
         </dependency>
 
         <!-- Embedded -->
@@ -269,9 +240,9 @@
     </profiles>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <felix.url>http://localhost:8080/system/console</felix.url>
+        <felix.url>http://localhost:4502/system/console</felix.url>
         <felix.user>admin</felix.user>
         <felix.password>admin</felix.password>
-        <procyon.version>0.5.36</procyon.version>
+        <cfr.version>0.152-SNAPSHOT</cfr.version>
     </properties>
 </project>
