--- a/pom.xml
+++ b/pom.xml
@@ -134,13 +134,15 @@
                             org.apache.commons.lang3.*
                             com.strobel.assembler.*;
                             com.strobel.decompiler.*;
+                            org.benf.cfr.*;
                         </Private-Package>
                         <Embed-Dependency>
                             gson,
                             guava,
                             commons-lang3,
                             commons-io,
-                            jd-core
+                            jd-core,
+                            cfr
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
@@ -232,7 +234,11 @@
             <artifactId>jd-core</artifactId>
             <version>${jd-core.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.benf</groupId>
+            <artifactId>cfr</artifactId>
+            <version>${cfr.version}</version>
+        </dependency>
         <!-- Embedded -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -278,9 +284,10 @@
     </profiles>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <felix.url>http://localhost:8080/system/console</felix.url>
+        <felix.url>http://localhost:4502/system/console</felix.url>
         <felix.user>admin</felix.user>
         <felix.password>admin</felix.password>
         <jd-core.version>1.1.3</jd-core.version>
+        <cfr.version>0.152-SNAPSHOT</cfr.version>
     </properties>
 </project>
