--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
-                <version>3.2.0</version>
+                <version>4.2.0</version>
                 <configuration>
                     <instructions>
                         <Bundle-Name>Apache Felix Web Console Search Plugin</Bundle-Name>
@@ -135,6 +135,7 @@
                             com.strobel.assembler.*;
                             com.strobel.decompiler.*;
                             org.benf.cfr.*;
+                            org.jetbrains.java.decompiler.*;
                         </Private-Package>
                         <Embed-Dependency>
                             gson,
@@ -142,7 +143,8 @@
                             commons-lang3,
                             commons-io,
                             jd-core,
-                            cfr
+                            cfr,
+                            fernflower
                         </Embed-Dependency>
                     </instructions>
                 </configuration>
@@ -152,8 +154,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -239,6 +241,13 @@
             <artifactId>cfr</artifactId>
             <version>${cfr.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.java.decompiler</groupId>
+            <artifactId>fernflower</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/jars/fernflower-decompiler.jar</systemPath>
+        </dependency>
         <!-- Embedded -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -284,7 +293,7 @@
     </profiles>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <felix.url>http://localhost:4502/system/console</felix.url>
+        <felix.url>http://localhost:8080/system/console</felix.url>
         <felix.user>admin</felix.user>
         <felix.password>admin</felix.password>
         <jd-core.version>1.1.3</jd-core.version>
