--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.neva.felix</groupId>
     <artifactId>search-webconsole-plugin</artifactId>
     <packaging>bundle</packaging>
-    <version>1.3.1-jd-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>search-webconsole-plugin</name>
     <description>Search everywhere plugin for Apache Felix Web Console</description>
     <inceptionYear>2017</inceptionYear>
@@ -32,7 +32,7 @@
         <url>https://github.com/neva-dev/felix-search-webconsole-plugin</url>
         <connection>scm:git:ssh://git@github.com/neva-dev/felix-search-webconsole-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/neva-dev/felix-search-webconsole-plugin.git</developerConnection>
-        <tag>search-webconsole-plugin-1.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
@@ -58,9 +58,9 @@
 
     <distributionManagement>
         <repository>
-            <id>bintray-neva-dev-maven-public</id>
-            <name>neva-dev-maven-public</name>
-            <url>https://api.bintray.com/maven/neva-dev/maven-public/felix-search-webconsole-plugin/;publish=1;override=1</url>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/neva-dev/felix-search-webconsole-plugin</url>
         </repository>
     </distributionManagement>
 
@@ -109,7 +109,7 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
-                <version>4.2.0</version>
+                <version>5.1.7</version>
                 <configuration>
                     <instructions>
                         <Bundle-Name>Apache Felix Web Console Search Plugin</Bundle-Name>
