--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.neva.felix</groupId>
     <artifactId>search-webconsole-plugin</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>search-webconsole-plugin</name>
     <description>Search everywhere plugin for Apache Felix Web Console</description>
     <inceptionYear>2017</inceptionYear>
@@ -64,27 +64,6 @@
         </repository>
     </distributionManagement>
 
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>bintray</name>
-            <url>https://jcenter.bintray.com</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>bintray-plugins</name>
-            <url>https://jcenter.bintray.com</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <build>
         <resources>
             <resource>
@@ -122,9 +101,10 @@
                             org.osgi.service.cm;version="[1.2,2)",
                             org.osgi.service.metatype;version="[1.1,2)",
                             org.osgi.util.tracker;version="[1.5.1,2)",
-                            javax.servlet;
-                            javax.servlet.http;version="[2.3,4)",
-                            org.apache.felix.webconsole;version="[3.0,4)"
+                            jakarta.servlet;version="[2.3,4)",
+                            jakarta.servlet.http;version="[2.3,4)",
+                            org.apache.felix.webconsole;version="[4.9,5)",
+                            org.apache.felix.webconsole.servlet;version="[4.9,5)"
                         </DynamicImport-Package>
                         <Private-Package>
                             com.neva.felix.webconsole.plugins.search.*,
@@ -214,13 +194,13 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.webconsole</artifactId>
-            <version>3.0.0</version>
+            <version>4.9.6</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.3</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
