--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.neva.felix</groupId>
     <artifactId>search-webconsole-plugin</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <name>search-webconsole-plugin</name>
     <description>Search everywhere plugin for Apache Felix Web Console</description>
     <inceptionYear>2017</inceptionYear>
